sand-macros/tests/cases/fail_sand_storage_missing_attr.rs
use sand_macros::SandStorage;

#[derive(SandStorage)]
pub struct MissingAttr {
    pub value: i32,
}

fn main() {}
